# aldict

./: .gitignore  ANALYSIS.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aldict/: __init__.py  alias_dict.py  frozen_alias_dict.py
alter_ego/: alias_dict.py
tests/: conftest.py  test_alias_dict.py  test_frozen_alias_dict.py
